<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Par1"
    tools:showIn="@layout/activity_par1"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/navBarBorder"
        android:theme="@style/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navBarBorder"
        app:layout_constraintBottom_toTopOf="@id/footerBorder">

        <LinearLayout
            android:id="@+id/floor1"
            android:theme="@style/parkView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/col1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/col1"
                android:theme="@style/label"
                android:gravity="center"/>


            <TextView
                android:id="@+id/col2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/col2"
                android:theme="@style/label"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/floor2"
            android:theme="@style/parkView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/col3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/col3"
                android:theme="@style/label"
                android:gravity="center"/>


            <TextView
                android:id="@+id/col4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/col4"
                android:theme="@style/label"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/floor3"
            android:theme="@style/parkView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/col5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/col5"
                android:theme="@style/label"
                android:gravity="center"/>


            <TextView
                android:id="@+id/col6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/col6"
                android:theme="@style/label"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footerBorder"
        android:theme="@style/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer"/>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>