<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="#000">

    <RelativeLayout
        android:id="@+id/navBarBorder"
        android:theme="@style/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical"
            android:padding="32dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/formGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/usnLabel"
                        android:theme="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/usn"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="8dp"
                            android:background="@drawable/inputicon">

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="7"
                                android:src="@drawable/ic_usn"
                                app:srcCompat="@drawable/ic_usn" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                        </LinearLayout>

                        <EditText
                            android:id="@+id/usn"
                            android:theme="@style/input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/inputbox"
                            android:padding="8dp"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorPrimaryDark"
                            android:hint="@string/usnHint"
                            android:importantForAutofill="yes"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/pswLabel"
                        android:theme="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/psw"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="8dp"
                            android:background="@drawable/inputicon">

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="7"
                                android:src="@drawable/ic_key"
                                app:srcCompat="@drawable/ic_key" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                        </LinearLayout>

                        <EditText
                            android:id="@+id/psw"
                            android:theme="@style/input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/inputbox"
                            android:padding="8dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:inputType="textPassword"
                            android:hint="@string/pswHint" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <Button
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:background="@drawable/primarybutton"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/white"
                        android:onClick="login"/>

                    <Button
                        android:id="@+id/signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:background="@drawable/secondarybutton"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footerBorder"
        android:theme="@style/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"/>

</LinearLayout>